fix: url 삭제 Commit용